<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/something"
            android:inputType="text"
            tools:igore="autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/name_ask2"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/some_number"
            android:inputType="number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>